# audit-portfolio

./: README.md
fuzz_reports/Omni Protocol/solana/bridge_token_factory/: .gitignore  Anchor.toml  README.md  Trident.toml  package-lock.json  package.json  pnpm-lock.yaml
fuzz_reports/Omni Protocol/solana/bridge_token_factory/trident-tests/fuzz_tests/: Cargo.toml
fuzz_reports/Omni Protocol/solana/bridge_token_factory/trident-tests/fuzz_tests/fuzz_0/: constants.rs  fuzz_instructions.rs  test_fuzz.rs
fuzz_reports/Omni Protocol/solana/bridge_token_factory/trident-tests/fuzz_tests/fuzz_0/instructions/: deploy_token.rs  finalize_transfer.rs  finalize_transfer_sol.rs  init_transfer.rs  init_transfer_sol.rs  initialize.rs  log_metadata.rs  mod.rs
fuzz_reports/Omni Protocol/solana/bridge_token_factory/trident-tests/fuzz_tests/fuzzing/honggfuzz/hfuzz_workspace/fuzz_0/: HONGGFUZZ.REPORT.TXT
fuzz_reports/raydium-cp-swap-by-chinepun/: README.md
fuzz_reports/raydium-cp-swap-by-chinepun/project-fuzzing/: README.md  fuzz.sh
fuzz_reports/raydium-cp-swap-by-chinepun/project-fuzzing/raydium-cp-swap/: Cargo.toml  README.md
fuzz_reports/raydium-cp-swap-by-chinepun/project-fuzzing/raydium-cp-swap/trident-tests/fuzz_tests/: Cargo.toml
fuzz_reports/raydium-cp-swap-by-chinepun/project-fuzzing/raydium-cp-swap/trident-tests/fuzz_tests/fuzz_0/: accounts_snapshots.rs  fuzz_instructions.rs  test_fuzz.rs  utils.rs
fuzz_reports/raydium-cp-swap-by-chinepun/project-fuzzing/raydium-cp-swap/trident-tests/fuzz_tests/fuzzing/hfuzz_workspace/fuzz_0/: HONGGFUZZ.REPORT.TXT
(+29 files in other folders)
