[[bin]]
name = "fuzz_0"
path = "fuzz_0/test_fuzz.rs"

[package]
name = "fuzz_tests"
version = "0.1.0"
description = "Created with Trident"
edition = "2021"

[dependencies]
arbitrary = "1.3.0"
assert_matches = "1.4.0"
wormhole-anchor-sdk = { git = "https://github.com/aankor/wormhole-scaffolding.git", branch = "anchor0.30.1", features = ["mainnet"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }

[dependencies.trident-client]
version = "0.8.1"

[dependencies.bridge_token_factory]
path = "../../programs/bridge_token_factory"

