[[bin]]
name = "fuzz_0"
path = "fuzz_0/test_fuzz.rs"

[package]
name = "fuzz_tests"
version = "0.1.0"
description = "Created with Trident"
edition = "2021"

[dependencies]
honggfuzz = "0.5.56"
arbitrary = "1.3.0"
assert_matches = "1.4.0"
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["metadata"] }
spl-associated-token-account = { version = "2.2.0", features = ["no-entrypoint"]}


[dependencies.trident-client]
path = "../../../trident/crates/client"

[dependencies.raydium-cp-swap]
path = "../../programs/cp-swap"

